[package]
name = "tic-tac-toe-montecarlo-algorithm"
version = "0.1.0"
authors = ["ThiagoNelsi <thiagonelsi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rand = "0.7.3"
termion = "1.5.5"